Limit Location Max value limited to 1000 units. #46855

Closed
opened 2015-11-24 17:42:32 +01:00 by Dimitar P. · 6 comments

System Information
Windows 7x64 Enterprise Nvidia Quadro 600

Blender Version
Broken: 2.76b

Short description of error

I work in mm for large architectural objects in order to maintain consistency of units throughout my workflow.

Exact steps for others to reproduce the error

When working in mm (metric, with a scale of 0.001), and when using the Limit Location Constraint with either meshes or bones, the maxium value is limited to 1m (1000 units)

**System Information** Windows 7x64 Enterprise Nvidia Quadro 600 **Blender Version** Broken: 2.76b **Short description of error** I work in mm for large architectural objects in order to maintain consistency of units throughout my workflow. **Exact steps for others to reproduce the error** When working in mm (metric, with a scale of 0.001), and when using the Limit Location Constraint with either meshes or bones, the maxium value is limited to 1m (1000 units)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Dimitar

Added subscriber: @Dimitar

This issue was referenced by fe3aaac118

This issue was referenced by fe3aaac1184f0a09ba7b367380c03dedbfae86b9

Added subscriber: @mont29

Added subscriber: @mont29

Yep, using range clamping in RNA instead of ui_range one… Will fix, you'll still be limited to 1000 with mouse, but will have no limit when typing values with keyboard.

Yep, using range clamping in RNA instead of ui_range one… Will fix, you'll still be limited to 1000 with mouse, but will have no limit when typing values with keyboard.
Bastien Montagne self-assigned this 2015-11-24 20:30:41 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46855
No description provided.