Fix T46855: Limit Location Max value limited to 1000 units.

Those should be UI limits, not hard absolute limits...